@@ -160,6 +160,7 @@
   </property>
   <property name="label">label_rights</property>
   <property name="label_edit">label_rights</property>
+  <property name="help">help_dc_rights</property>
   <property name="is_i18n">True</property>
   <property name="display_width">30</property>
   <property name="size_max">80</property>
@@ -226,45 +227,45 @@
  </widget>
  <table>
   <row>
-   <cell name="Title" ncols="2"/>
-  </row>
-  <row>
-   <cell name="Description" ncols="2"/>
-  </row>
-  <row>
-   <cell name="PortalType" ncols="2"/>
-  </row>
-  <row>
-   <cell name="Subject"/>
-   <cell name="Rights"/>
-  </row>
-  <row>
-   <cell name="Source"/>
-   <cell name="Coverage"/>
-  </row>
-  <row>
-   <cell name="Relation" ncols="2"/>
-  </row>
-  <row>
-   <cell name="EffectiveDate"/>
-   <cell name="ExpirationDate"/>
-  </row>
-  <row>
-   <cell name="Contributors"/>
-   <cell name="Creator"/>
-  </row>
-  <row>
+   <cell name="PortalType"/>
    <cell name="Format"/>
    <cell name="Language"/>
+  </row>
+  <row>
+   <cell name="Title"/>
+  </row>
+  <row>
+   <cell name="Description"/>
   </row>
   <row>
    <cell name="CreationDate"/>
    <cell name="ModificationDate"/>
   </row>
   <row>
+   <cell name="EffectiveDate"/>
+   <cell name="ExpirationDate"/>
+  </row>
+  <row>
+   <cell name="Subject"/>
+   <cell name="Coverage"/>
+  </row>
+  <row>
+   <cell name="Source"/>
+   <cell name="Rights"/>
+  </row>
+  <row>
+   <cell name="Relation"/>
+  </row>
+  <row>
+   <cell name="Creator"/>
+   <cell name="Contributors"/>
+  </row>
+  <row>
    <cell name="preview"/>
    <cell name="preview_title"/>
    <cell name="preview_alt"/>
+  </row>
+  <row>
    <cell name="allow_discussion"/>
   </row>
  </table>
