@@ -6,7 +6,8 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
--
+- Reorganized a bit the metadata layout, especially so that the now accessible
+  preview image widget has enough room.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
